--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -13,7 +13,7 @@
     z-index: 0;
 }
 
-.app_aboutus-content {
+.app__aboutus-content {
     width: 100%;
     z-index: 2;
 }
@@ -46,21 +46,21 @@
     text-align: left;
 }
 
-.app__aboutus-content_history p,
-.app__aboutus-content_about p {
+.app__aboutus-content_about p,
+.app__aboutus-content_history p {
     margin: 2rem 0;
     color: var(--color-grey);
 }
 
-@media screen and (max-width: 2000px) {
+@media screen and (min-width: 2000px) {
     .app__aboutus-content_knife img {
         height: 1110px;
     }
 
-    .app__aboutus-content_history p,
-    .app__aboutus-content_about p {
+    .app__aboutus-content_about p,
+    .app__aboutus-content_history p {
         margin: 4rem 0;
-}
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -75,7 +75,7 @@
 
 @media screen and (max-width: 650px) {
     .app__aboutus-overlay img {
-        width: 80;
+        width: 80%;
         height: 320px;
     }
 }
